[tool.poetry]
name = "combine"
version = "0.1.0"
description = "Core tool for Combine Harvester"
authors = ["Pablo (OLIS) <pablo.moraleshenry@olis.ri.gov>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "3.2.24"
kombu = "^5.3.5"
celery = "^5.3.6"
appnope = "^0.1.4"
avro = "^1.11.3"
backports-shutil-get-terminal-size = "^1.0.0"
blinker = "^1.7.0"
boto3 = "^1.34.57"
beautifulsoup4 = "^4.12.3"
redis = "^5.0.2"
certifi = "^2024.2.2"
chardet = "^5.2.0"
cloudpickle = "^3.0.0"
configparser = "^6.0.1"
cookies = "^2.2.1"
dashtable = "^1.4.5"
decorator = "^5.1.1"
django-crispy-forms = "1.7.2"
django-datatables-view = "^1.20.0"
django-extensions = "^3.2.3"
django-filter = "^23.5"
django-tables2 = "^2.7.0"
elasticsearch = "^8.12.1"
elasticsearch-dsl = "^8.12.0"
enum34 = "^1.1.10"
filelock = "^3.13.1"
future = "^1.0.0"
idna = "^3.7"
ipython = "^8.22.2"
jedi = "^0.19.1"
jsonschema = "^4.21.1"
livy = "^0.8.0"
lxml = "^5.1.0"
mongoengine = "^0.28.2"
mysqlclient = "^2.2.4"
openpyxl = "^3.1.2"
pathlib2 = "^2.3.7.post1"
pexpect = "^4.9.0"
pickleshare = "^0.7.5"
polling = "^0.3.2"
prompt-toolkit = "^3.0.43"
ptyprocess = "^0.7.0"
py = "^1.11.0"
py4j = "^0.10.9.7"
pydot = "^2.0.0"
pygments = "^2.17.2"
pyjxslt = "^0.7.0"
pykerberos = "^1.2.4"
pymongo = "^4.6.2"
pytest = "^8.0.2"
pyparsing = "^3.1.2"
pytest-ordering = "^0.6"
python-dateutil = "^2.9.0.post0"
pytz = "^2024.1"
requests = "^2.31.0"
requests-kerberos = "^0.14.0"
responses = "^0.25.0"
scandir = "^1.10.0"
sickle = "^0.7.0"
simplegeneric = "^0.8.1"
six = "^1.16.0"
sphinx = "^7.2.6"
sphinx-autobuild = "^2024.2.4"
sphinx-rtd-theme = "^2.0.0"
sqlalchemy = "^2.0.28"
sxsdiff = "^0.3.0"
toposort = "^1.10"
traitlets = "^5.14.1"
wcwidth = "^0.2.13"
xmltodict = "^0.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
